# portal-ui-python-tests

./: .env  Pipfile  README.md  base_element.py  base_page.py  conftest.py  locator.py  locators.py  pyproject.toml  pytest.ini  qase_client.py  testrail.py  testrail_test.py  utils.py
.github/workflows/: ci.yml
prod_smoke/: smoke_tests.py
prod_smoke_tests/uk_prod_smoke_tests/: test_filtering_dashboard.py  test_homepage_dashboard.py  test_login_and_forgot_pw.py
prod_smoke_tests/us_prod_smoke_tests/: test_us_prod_smoke_tests.py
